app/resources/css/style.css
@import url(http://fonts.googleapis.com/css?family=Open+Sans);

body{
    margin:0;
}

#map {
    height: 100%;
}

#top-bar{
    position : absolute;
    top : 1%;
    left : 1%;
    width : 67.5%;
    height : 10%;
    background-color: rgba(255,255,255,0.66);
}

#layer{
    position : absolute;
    top : 12%;
    left : 1%;
    width : 20%;
    height : 60%;
    background-color: rgba(255,255,255,0.66);
}

#layer svg rect {
    fill: #FFFFFF;
}

#layer svg rect:hover {
    fill: #76B3E5;
}

#layer svg rect.selected {
    fill: #6699CC;
}

#layer svg text {
    font-family: Helvetica, 'Open Sans', sans-serif;
}

#layer svg text.selected {
    font-family: Helvetica, 'Open Sans', sans-serif;
    color: #FFFFFF;
}

#weather{
    position: absolute;
    top: 1%;
    right: 1%;
    width : 30%;
    height: 10%;
    background-color: rgba(255,255,255,0.66);
}

#mapcontrol{
    position : absolute;
    bottom : 7%;
    left : 1%;
    width : 20%;
    height : 20%;
    background-color: rgba(255,255,255,0.66);
}

#graphs{
    position : absolute;
    top : 12%;
    right : 1%;
    width : 30%;
    height : 60%;
    background-color: rgba(255,255,255,0.66);

}

#notifications{
    position : absolute;
    bottom : 7%;
    right: 1%;
    width : 30%;
    height : 20%;
    background-color: rgba(255,255,255,0.66);
}

#toggle{
    position : absolute;
    bottom : 0px;
    left : 0px;
    width : 100%;
    height : 5%;
/*    background-color: rgba(255,255,255,0.66);*/
    width: 100%;
    padding: 6px;
    background-color: #333333;
    float: left;
}

#toggle svg text {
    fill: #FFFFFF;
    margin-right: 10px;
    font-family: Helvetica, 'Open Sans', Sans-serif;
    font-weight: lighter;
    font-size: 11px;
    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.65);
    padding: 3px;
}

#mapTiles {
    overflow: auto;
}

.map-preview-tile {
    width: 180px;
    height: 130px;
    margin-right: 20px;
    float: left;
    border: 3px solid #CCCCCC;
}

.map-preview-tile span {
    background-color: #666666;
    color: #FFFF99;
    padding: 2px 10px 4px 6px;
    font-family: Courier, Serif;
    font-size: 13px;
    font-weight: lighter;
}

.map-preview-tile.selected {
    border: 3px solid #CC9933;
}

.map-preview-tile.streetview {
    background-image: url("resources/images/streetview.png");
    background-size: 100% 100%;
}

.map-preview-tile.satellite {
    background-image: url("resources/images/satellite.png");
    background-size: 100% 100%;
}

#UI-feature-toggle {
    width: 100%;
    padding: 6px;
    background-color: #333333;
    float: left;

}

#UI-feature-toggle span {
    color: #FFFFFF;
    margin-right: 10px;
    font-family: Helvetica, 'Open Sans', Sans-serif;
    font-weight: lighter;
    font-size: 11px;
    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.65);
    padding: 3px;
}

#UI-feature-toggle span.selected {
    -moz-border-radius:1px 1px 1px 1px;  // rounds corners for firefox
    border-radius:1px 1px 1px 1px;
    background-color: #66CC66;
}

